# nu_plugin_template

./: Cargo.toml  README.md  README.md.liquid  cargo-generate.toml  init.rhai  pre.rhai  setup.rhai  test.nu
src/: main.rs  template.rs  {{plugin_name}}.rs
src/commands/: mod.rs  {{command_module}}.rs
