[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
description = "a nushell plugin called {{ plugin_name }}"
{% if github_username != empty -%}
repository = "https://github.com/{{ github_username }}/{{ project-name }}"
{% endif -%}
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.92.0"
nu-protocol = { version = "0.92.0", features = ["plugin"] }

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.92.0" }
